:construction: Remote job commit 7

--- a/bank_statement/llama_bank_statement_2turn_balance_prompt.ipynb
+++ b/bank_statement/llama_bank_statement_2turn_balance_prompt.ipynb
@@ -44,10 +44,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": "# Cell 1: Imports\n\n# Add parent directory to path AND change working directory for config file resolution\nimport sys\nimport os\nfrom pathlib import Path\n\n# Get project root (parent of bank_statement/)\nproject_root = Path.cwd().parent\nsys.path.insert(0, str(project_root))\n\n# Change working directory to project root so config/field_definitions.yaml is found\nos.chdir(project_root)\nprint(f\"📁 Working directory: {os.getcwd()}\")\n\n# Standard library imports\nimport random\nimport re\n\n# Third-party imports\nimport numpy as np\nimport torch\nfrom PIL import Image\nfrom transformers import AutoProcessor, MllamaForConditionalGeneration\nfrom IPython.display import display, Markdown, HTML\nfrom common.reproducibility import set_seed\nset_seed(42)"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Working directory: /home/jovyan/nfs_share/tod/LMM_POC\n",
+      "✅ Random seed set to 42 for reproducibility\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 1: Imports\n",
+    "\n",
+    "# Add parent directory to path AND change working directory for config file resolution\n",
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get project root (parent of bank_statement/)\n",
+    "project_root = Path.cwd().parent\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Change working directory to project root so config/field_definitions.yaml is found\n",
+    "os.chdir(project_root)\n",
+    "print(f\"📁 Working directory: {os.getcwd()}\")\n",
+    "\n",
+    "# Standard library imports\n",
+    "import random\n",
+    "import re\n",
+    "\n",
+    "# Third-party imports\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, MllamaForConditionalGeneration\n",
+    "from IPython.display import display, Markdown, HTML\n",
+    "from common.reproducibility import set_seed\n",
+    "set_seed(42)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -348,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8da415af207347adbb6203c0bbb00d4d",
+       "model_id": "af523dc3db6744b8b34a87dae3d922ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1569,25 +1606,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "Field definitions not found: config/field_definitions.yaml",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdateutil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m parser \u001b[38;5;28;01mas\u001b[39;00m date_parser\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Import evaluation metrics from common module (same as batch_v2 scripts)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcommon\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mevaluation_metrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      9\u001b[39m     calculate_field_accuracy_f1,\n\u001b[32m     10\u001b[39m     calculate_field_accuracy_f1_position_agnostic,\n\u001b[32m     11\u001b[39m     calculate_field_accuracy_kieval,\n\u001b[32m     12\u001b[39m     calculate_correlation_aware_f1,\n\u001b[32m     13\u001b[39m     load_ground_truth,\n\u001b[32m     14\u001b[39m )\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Bank statement fields to evaluate (same as batch_v2)\u001b[39;00m\n\u001b[32m     17\u001b[39m BANK_STATEMENT_FIELDS = [\n\u001b[32m     18\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mDOCUMENT_TYPE\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     19\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mSTATEMENT_DATE_RANGE\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     22\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mTRANSACTION_AMOUNTS_PAID\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     23\u001b[39m ]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/evaluation_metrics.py:22\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     23\u001b[39m     get_all_field_types,\n\u001b[32m     24\u001b[39m     get_boolean_fields,\n\u001b[32m     25\u001b[39m     get_calculated_fields,\n\u001b[32m     26\u001b[39m     get_list_fields,\n\u001b[32m     27\u001b[39m     get_monetary_fields,\n\u001b[32m     28\u001b[39m     get_phone_fields,\n\u001b[32m     29\u001b[39m     get_transaction_list_fields,\n\u001b[32m     30\u001b[39m )\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload_ground_truth\u001b[39m(\n\u001b[32m     34\u001b[39m     csv_path: \u001b[38;5;28mstr\u001b[39m, show_sample: \u001b[38;5;28mbool\u001b[39m = \u001b[38;5;28;01mFalse\u001b[39;00m, verbose: \u001b[38;5;28mbool\u001b[39m = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     35\u001b[39m ) -> Dict[\u001b[38;5;28mstr\u001b[39m, Dict]:\n\u001b[32m     36\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     37\u001b[39m \u001b[33;03m    Load ground truth data from CSV file.\u001b[39;00m\n\u001b[32m     38\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     49\u001b[39m \u001b[33;03m        ValueError: If CSV has invalid structure\u001b[39;00m\n\u001b[32m     50\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/config.py:352\u001b[39m\n\u001b[32m    348\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDEBUG _ensure_fields_loaded: BOOLEAN_FIELDS = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mBOOLEAN_FIELDS\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    351\u001b[39m \u001b[38;5;66;03m# Initialize fields on module import for backward compatibility\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m352\u001b[39m \u001b[43m_ensure_fields_loaded\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    355\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_ensure_initialized\u001b[39m():\n\u001b[32m    356\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Ensure module-level variables are initialized.\"\"\"\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/config.py:328\u001b[39m, in \u001b[36m_ensure_fields_loaded\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    324\u001b[39m \u001b[38;5;28;01mglobal\u001b[39;00m BOOLEAN_FIELDS, CALCULATED_FIELDS, TRANSACTION_LIST_FIELDS\n\u001b[32m    326\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m EXTRACTION_FIELDS \u001b[38;5;129;01mor\u001b[39;00m BOOLEAN_FIELDS \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    327\u001b[39m     \u001b[38;5;66;03m# Use simplified schema\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m328\u001b[39m     config = \u001b[43m_get_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    329\u001b[39m     EXTRACTION_FIELDS = config.extraction_fields\n\u001b[32m    330\u001b[39m     FIELD_COUNT = config.field_count\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/config.py:239\u001b[39m, in \u001b[36m_get_config\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    236\u001b[39m             \u001b[38;5;66;03m# DEBUG: Print what was set\u001b[39;00m\n\u001b[32m    237\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDEBUG: self.boolean_fields = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.boolean_fields\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m239\u001b[39m     _config = \u001b[43mSimpleConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mloader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    240\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m _config\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/config.py:211\u001b[39m, in \u001b[36m_get_config.<locals>.SimpleConfig.__init__\u001b[39m\u001b[34m(self, loader)\u001b[39m\n\u001b[32m    208\u001b[39m \u001b[38;5;28mself\u001b[39m.field_loader = loader\n\u001b[32m    210\u001b[39m \u001b[38;5;66;03m# Get invoice fields as the primary field set\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m211\u001b[39m \u001b[38;5;28mself\u001b[39m.extraction_fields = \u001b[43mloader\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_document_fields\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43minvoice\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    212\u001b[39m \u001b[38;5;28mself\u001b[39m.field_count = \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.extraction_fields)\n\u001b[32m    213\u001b[39m \u001b[38;5;28mself\u001b[39m.active_field_count = \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m.extraction_fields)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/field_definitions_loader.py:37\u001b[39m, in \u001b[36mSimpleFieldLoader.get_document_fields\u001b[39m\u001b[34m(self, document_type)\u001b[39m\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_document_fields\u001b[39m(\u001b[38;5;28mself\u001b[39m, document_type: \u001b[38;5;28mstr\u001b[39m) -> List[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[32m     36\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get field list for a document type.\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m37\u001b[39m     config = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_load_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     38\u001b[39m     doc_fields = config.get(\u001b[33m\"\u001b[39m\u001b[33mdocument_fields\u001b[39m\u001b[33m\"\u001b[39m, {})\n\u001b[32m     40\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m document_type \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m doc_fields:\n\u001b[32m     41\u001b[39m         \u001b[38;5;66;03m# Return invoice fields as default\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/nfs_share/tod/LMM_POC/common/field_definitions_loader.py:28\u001b[39m, in \u001b[36mSimpleFieldLoader._load_config\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._config \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     27\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.config_path.exists():\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mField definitions not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.config_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     30\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m.config_path.open(\u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m, encoding=\u001b[33m\"\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     31\u001b[39m         \u001b[38;5;28mself\u001b[39m._config = yaml.safe_load(f)\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: Field definitions not found: config/field_definitions.yaml"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG: field_types_from_yaml = {'monetary': ['GST_AMOUNT', 'TOTAL_AMOUNT', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'boolean': ['IS_GST_INCLUDED'], 'list': ['LINE_ITEM_DESCRIPTIONS', 'LINE_ITEM_QUANTITIES', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE'], 'date': ['INVOICE_DATE', 'STATEMENT_DATE_RANGE', 'TRANSACTION_DATES']}\n",
+      "DEBUG: boolean fields from YAML = ['IS_GST_INCLUDED']\n",
+      "DEBUG: self.boolean_fields = ['IS_GST_INCLUDED']\n",
+      "DEBUG _ensure_fields_loaded: BOOLEAN_FIELDS = ['IS_GST_INCLUDED']\n",
+      "📁 Loading ground truth...\n",
+      "📊 Ground truth CSV loaded with 13 rows and 20 columns\n",
+      "📋 Available columns: ['image_file', 'DOCUMENT_TYPE', 'BUSINESS_ABN', 'BUSINESS_ADDRESS', 'GST_AMOUNT', 'INVOICE_DATE', 'IS_GST_INCLUDED', 'LINE_ITEM_DESCRIPTIONS', 'LINE_ITEM_QUANTITIES', 'LINE_ITEM_PRICES', 'LINE_ITEM_TOTAL_PRICES', 'PAYER_ADDRESS', 'PAYER_NAME', 'STATEMENT_DATE_RANGE', 'SUPPLIER_NAME', 'TOTAL_AMOUNT', 'TRANSACTION_AMOUNTS_PAID', 'TRANSACTION_DATES', 'TRANSACTION_AMOUNTS_RECEIVED', 'ACCOUNT_BALANCE']\n",
+      "✅ Using 'image_file' as image identifier column\n",
+      "✅ Ground truth mapping created for 13 images\n",
+      "\n",
+      "🔍 Looking up ground truth for: image_003.png\n",
+      "✅ Ground truth found!\n",
+      "\n",
+      "==========================================================================================\n",
+      "📊 FIELD COMPARISON (order_aware_f1) - image_003.png\n",
+      "==========================================================================================\n",
+      "\n",
+      "Status   Field                                F1     Prec   Recall\n",
+      "------------------------------------------------------------------------------------------\n",
+      "✅ OK     DOCUMENT_TYPE                   100.0%  100.0%  100.0%\n",
+      "✅ OK     STATEMENT_DATE_RANGE            100.0%  100.0%  100.0%\n",
+      "✅ OK     TRANSACTION_DATES               100.0%  100.0%  100.0%\n",
+      "✅ OK     LINE_ITEM_DESCRIPTIONS          100.0%  100.0%  100.0%\n",
+      "✅ OK     TRANSACTION_AMOUNTS_PAID        100.0%  100.0%  100.0%\n",
+      "------------------------------------------------------------------------------------------\n",
+      "\n",
+      "📋 DETAILED VALUES:\n",
+      "------------------------------------------------------------------------------------------\n",
+      "\n",
+      "DOCUMENT_TYPE:\n",
+      "  Extracted:    BANK_STATEMENT\n",
+      "  Ground Truth: BANK_STATEMENT\n",
+      "\n",
+      "STATEMENT_DATE_RANGE:\n",
+      "  Extracted:    03/05/2025 - 10/05/2025\n",
+      "  Ground Truth: 03/05/2025 - 10/05/2025\n",
+      "\n",
+      "TRANSACTION_DATES:\n",
+      "  Extracted:    03/05/2025 | 04/05/2025 | 05/05/2025 | 07/05/2025 | 08/05/2025 | 10/05/2025\n",
+      "  Ground Truth: 03/05/2025 | 04/05/2025 | 05/05/2025 | 07/05/2025 | 08/05/2025 | 10/05/2025\n",
+      "\n",
+      "LINE_ITEM_DESCRIPTIONS:\n",
+      "  Extracted:    ONLINE PURCHASE AMAZON AU | EFTPOS PURCHASE COLES EXP | EFTPOS PURCHASE COLES EX...\n",
+      "  Ground Truth: ONLINE PURCHASE AMAZON AU | EFTPOS PURCHASE COLES EXP | EFTPOS PURCHASE COLES EX...\n",
+      "\n",
+      "TRANSACTION_AMOUNTS_PAID:\n",
+      "  Extracted:    $288.03 | $22.50 | $114.66 | $187.59 | $112.50 | $146.72\n",
+      "  Ground Truth: $288.03 | $22.50 | $114.66 | $187.59 | $112.50 | $146.72\n",
+      "\n",
+      "==========================================================================================\n",
+      "📊 OVERALL F1 SCORE (order_aware_f1): 100.0%\n",
+      "==========================================================================================\n"
      ]
     }
    ],
@@ -1863,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1880,6 +1957,7 @@
       "💰 Balance column: Balance\n",
       "📝 Total transactions parsed: 8\n",
       "💸 Debit transactions: 6\n",
+      "📊 Overall F1 Score: 100.0%\n",
       "\n",
       "✅ Pipeline complete!\n"
      ]
