:construction: Remote job commit 14

--- a/bank_statement/ivl3_8b_bank_statement_3turn_table.ipynb
+++ b/bank_statement/ivl3_8b_bank_statement_3turn_table.ipynb
@@ -55,7 +55,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Cell 1: Imports and Configuration\n\n# Add parent directory to path AND change working directory for config file resolution\nimport sys\nimport os\nfrom pathlib import Path\n\n# Get project root (parent of bank_statement/)\nproject_root = Path.cwd().parent\nsys.path.insert(0, str(project_root))\n\n# Change working directory to project root so config/field_definitions.yaml is found\nos.chdir(project_root)\nprint(f\"📁 Working directory: {os.getcwd()}\")\n\nimport random\nimport math\n\nimport numpy as np\nimport torch\nfrom PIL import Image\nfrom transformers import AutoModel, AutoTokenizer, AutoConfig, BitsAndBytesConfig\nimport torchvision.transforms as T\nfrom torchvision.transforms.functional import InterpolationMode\n\n# IPython display for rendering markdown\nfrom IPython.display import display, Markdown\n\n# ============================================================================\n# CONFIGURATION\n# ============================================================================\nCONFIG = {\n    # Model path - update for your environment\n    \"MODEL_PATH\": \"/home/jovyan/nfs_share/models/InternVL3-8B\",\n    \n    # Generation settings\n    \"MAX_NEW_TOKENS\": 4096,\n    \n    # Image processing - V100 optimized\n    \"MAX_TILES\": 14,  # V100 optimized (use 18 for A10G, 36 for H200)\n}\n\nprint(f\"✅ Configuration loaded:\")\nprint(f\"   Model: {CONFIG['MODEL_PATH']}\")\nprint(f\"   Max tiles: {CONFIG['MAX_TILES']}\")"
+   "source": [
+    "# Cell 1: Imports and Configuration\n",
+    "import os\n",
+    "os.environ[\"CUBLAS_WORKSPACE_CONFIG\"] = \":4096:8\"\n",
+    "\n",
+    "# Add parent directory to path AND change working directory for config file resolution\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Get project root (parent of bank_statement/)\n",
+    "project_root = Path.cwd().parent\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Change working directory to project root so config/field_definitions.yaml is found\n",
+    "os.chdir(project_root)\n",
+    "print(f\"📁 Working directory: {os.getcwd()}\")\n",
+    "\n",
+    "import random\n",
+    "import math\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoModel, AutoTokenizer, AutoConfig, BitsAndBytesConfig\n",
+    "import torchvision.transforms as T\n",
+    "from torchvision.transforms.functional import InterpolationMode\n",
+    "\n",
+    "# IPython display for rendering markdown\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "# ============================================================================\n",
+    "# CONFIGURATION\n",
+    "# ============================================================================\n",
+    "CONFIG = {\n",
+    "    # Model path - update for your environment\n",
+    "    \"MODEL_PATH\": \"/home/jovyan/nfs_share/models/InternVL3-8B\",\n",
+    "    \n",
+    "    # Generation settings\n",
+    "    \"MAX_NEW_TOKENS\": 4096,\n",
+    "    \n",
+    "    # Image processing - V100 optimized\n",
+    "    \"MAX_TILES\": 14,  # V100 optimized (use 18 for A10G, 36 for H200)\n",
+    "}\n",
+    "\n",
+    "print(f\"✅ Configuration loaded:\")\n",
+    "print(f\"   Model: {CONFIG['MODEL_PATH']}\")\n",
+    "print(f\"   Max tiles: {CONFIG['MAX_TILES']}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,8 +127,9 @@
    "source": [
     "# Cell 3: Set random seed\n",
     "\n",
-    "from common.reproducibility import set_seed\n",
-    "set_seed(42)"
+    "from common.reproducibility import set_seed, configure_deterministic_mode\n",
+    "set_seed(42)\n",
+    "configure_deterministic_mode(True) "
    ]
   },
   {
