--- a/bank_statement/ivl3_8b_bank_statement_2turn_balance_prompt.ipynb
+++ b/bank_statement/ivl3_8b_bank_statement_2turn_balance_prompt.ipynb
@@ -48,10 +48,11 @@
    ],
    "source": [
     "# Cell 1: Imports and Configuration\n",
+    "import os\n",
+    "os.environ[\"CUBLAS_WORKSPACE_CONFIG\"] = \":4096:8\"\n",
     "\n",
     "# Add parent directory to path AND change working directory for config file resolution\n",
     "import sys\n",
-    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "# Get project root (parent of bank_statement/)\n",
@@ -117,8 +118,9 @@
    "source": [
     "# Cell 2: Set random seed\n",
     "\n",
-    "from common.reproducibility import set_seed\n",
-    "set_seed(42)"
+    "from common.reproducibility import set_seed, configure_deterministic_mode\n",
+    "set_seed(42)\n",
+    "configure_deterministic_mode(True) "
    ]
   },
   {
