--- a/bank_statement/ivl3_5_8b_bank_statement_2turn_balance_prompt.ipynb
+++ b/bank_statement/ivl3_5_8b_bank_statement_2turn_balance_prompt.ipynb
@@ -181,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8f3134b3299463ab99d468832e7753d",
+       "model_id": "cf2f9228e1934d97908efa7168c96507",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "✅ InternVL3.5-8B model loaded successfully!\n",
-      "✅ Model distributed across devices: {'vision_model': 0, 'language_model.model.embed_tokens': 0, 'language_model.model.layers.0': 0, 'language_model.model.layers.1': 0, 'language_model.model.layers.2': 0, 'language_model.model.layers.3': 0, 'language_model.model.layers.4': 0, 'language_model.model.layers.5': 0, 'language_model.model.layers.6': 0, 'language_model.model.layers.7': 0, 'language_model.model.layers.8': 0, 'language_model.model.layers.9': 0, 'language_model.model.layers.10': 0, 'language_model.model.layers.11': 0, 'language_model.model.layers.12': 0, 'language_model.model.layers.13': 0, 'language_model.model.layers.14': 0, 'language_model.model.layers.15': 0, 'language_model.model.layers.16': 1, 'language_model.model.layers.17': 1, 'language_model.model.layers.18': 1, 'language_model.model.layers.19': 1, 'language_model.model.layers.20': 1, 'language_model.model.layers.21': 1, 'language_model.model.layers.22': 1, 'language_model.model.layers.23': 1, 'language_model.model.layers.24': 1, 'language_model.model.layers.25': 1, 'language_model.model.layers.26': 1, 'language_model.model.layers.27': 1, 'language_model.model.layers.28': 1, 'language_model.model.layers.29': 1, 'language_model.model.layers.30': 1, 'language_model.model.layers.31': 1, 'language_model.model.layers.32': 1, 'language_model.model.layers.33': 1, 'language_model.model.layers.34': 1, 'language_model.model.layers.35': 1, 'language_model.model.norm': 1, 'language_model.model.rotary_emb': 1, 'language_model.lm_head': 1, 'mlp1': 1}\n",
+      "✅ Model distributed across devices: {'': 0}\n",
       "📊 Parameters: 8,528,318,464\n",
       "📊 Precision: bfloat16 with flash attention\n",
       "🔲 Max Tiles: 36\n"
