:construction: Remote job commit 22

--- a/bank_statement/unified_bank_extraction.ipynb
+++ b/bank_statement/unified_bank_extraction.ipynb
@@ -210,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d7840f3e30b4c48bdde5f0c542a4316",
+       "model_id": "6196607f7dfa4bd19d31be5f006580a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,7 +555,7 @@
       "  BANK_STATEMENT\n",
       "\n",
       "STATEMENT_DATE_RANGE:\n",
-      "  Mon 11 Aug 2025 - Thu 04 Sep 2025\n",
+      "  11 Aug 2025 - 04 Sep 2025\n",
       "\n",
       "TRANSACTION_DATES:\n",
       "  Thu 04 Sep 2025 | Mon 01 Sep 2025 | Sun 31 Aug 2025 | Fri 29 Aug 2025 | Wed 27 Aug 2025 | Sat 23 Aug...\n",
@@ -570,7 +570,7 @@
       "TRANSACTION SUMMARY\n",
       "============================================================\n",
       "Total debit transactions: 15\n",
-      "Date range: Mon 11 Aug 2025 - Thu 04 Sep 2025\n"
+      "Date range: 11 Aug 2025 - 04 Sep 2025\n"
      ]
     }
    ],
@@ -700,13 +700,13 @@
       "EVALUATION RESULTS\n",
       "============================================================\n",
       "OK      DOCUMENT_TYPE                  F1: 100.0%\n",
-      "FAIL    STATEMENT_DATE_RANGE           F1: 0.0%\n",
+      "OK      STATEMENT_DATE_RANGE           F1: 100.0%\n",
       "PARTIAL TRANSACTION_DATES              F1: 96.6%\n",
       "PARTIAL LINE_ITEM_DESCRIPTIONS         F1: 88.9%\n",
       "PARTIAL TRANSACTION_AMOUNTS_PAID       F1: 96.6%\n",
       "\n",
       "------------------------------------------------------------\n",
-      "OVERALL F1 SCORE: 76.4%\n",
+      "OVERALL F1 SCORE: 96.4%\n",
       "============================================================\n"
      ]
     }
@@ -956,7 +956,7 @@
       "Headers: 5 detected\n",
       "Balance column: Balance\n",
       "Transactions extracted: 15 debits\n",
-      "Date range: Mon 11 Aug 2025 - Thu 04 Sep 2025\n",
+      "Date range: 11 Aug 2025 - 04 Sep 2025\n",
       "\n",
       "Pipeline complete!\n"
      ]
